--- a/styleguide/item-frontend-components-common-table-row.html
+++ b/styleguide/item-frontend-components-common-table-row.html
@@ -52,7 +52,7 @@
                   #frontend.components.common.table-row
               </span>
             </span>
-            Responsive Table Column
+            Responsive Table Row
           </a>
         </h4>
 
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table column element without the <code>td</code> element.</p>
+            <p>Make a responsive table row element without the <code>tr</code> element.</p>
 
           </div>
 
@@ -103,25 +103,16 @@
           <div class="kss-modifier__example">
             <div class="table">
   <div class="table-head">
-    <div class="table-row">
-      <div class="table-col">Head Col 1</div>
-      <div class="table-col">Head Col 2</div>
-      <div class="table-col">Head Col 3</div>
-    </div>
+    <div class="table-row">Table head row div vs. <code>th</code> element.</div>
+    <div class="table-row">Another table head row</div>
   </div>
   <div class="table-body">
-    <div class="table-row">
-      <div class="table-col">Body Col 1</div>
-      <div class="table-col">Body Col 2</div>
-      <div class="table-col">Body Col 3</div>
-    </div>
+    <div class="table-row">Table row div vs. <code>tr</code> element.</div>
+    <div class="table-row">Another table row</div>
   </div>
   <div class="table-foot">
-    <div class="table-row">
-      <div class="table-col">Footer Col 1</div>
-      <div class="table-col">Footer Col 2</div>
-      <div class="table-col">Footer Col 3</div>
-    </div>
+    <div class="table-row">Table foot row div vs. <code>tr</code> element.</div>
+    <div class="table-row">Another table foot row</div>
   </div>
 </div>
             <div class="kss-modifier__example-footer"></div>
@@ -135,31 +126,22 @@
             </summary>
             <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;
   &lt;div class&#x3D;&quot;table-head&quot;&gt;
-    &lt;div class&#x3D;&quot;table-row&quot;&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Head Col 1&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Head Col 2&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Head Col 3&lt;/div&gt;
-    &lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Table head row div vs. &lt;code&gt;th&lt;/code&gt; element.&lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Another table head row&lt;/div&gt;
   &lt;/div&gt;
   &lt;div class&#x3D;&quot;table-body&quot;&gt;
-    &lt;div class&#x3D;&quot;table-row&quot;&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Body Col 1&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Body Col 2&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Body Col 3&lt;/div&gt;
-    &lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Table row div vs. &lt;code&gt;tr&lt;/code&gt; element.&lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Another table row&lt;/div&gt;
   &lt;/div&gt;
   &lt;div class&#x3D;&quot;table-foot&quot;&gt;
-    &lt;div class&#x3D;&quot;table-row&quot;&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Footer Col 1&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Footer Col 2&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Footer Col 3&lt;/div&gt;
-    &lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Table foot row div vs. &lt;code&gt;tr&lt;/code&gt; element.&lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Another table foot row&lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 105
+          Source: <code>frontend/components/classes/_common.scss</code>, line 79
         </div>
 
     </div>
@@ -198,3 +180,4 @@
 <!-- Automatically built using <a href="https://github.com/kss-node/kss-node">kss-node</a>. -->
 </body>
 </html>
+/html>
