--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -84,6 +84,7 @@
 <li><code>$ gulp htmlmin</code> Minifies HTML documents</li>
 <li><code>$ gulp uncss</code> Removes unused styles</li>
 </ul>
+<p><strong>IMPORTANT: DO NOT EDIT ANYTHING IN THE <code>src/scss/frontend</code> OR <code>dist</code> DIRECTORIES!</strong> This is for Frontend Build&#39;s core Sass setup. Updates will override any changes in these directories.</p>
 <h3 id="contributing">Contributing</h3>
 <p>Check out the <a href="CONTRIBUTING.md">Contributing Guidelines</a>.</p>
 <h2 id="security">Security</h2>
@@ -111,6 +112,7 @@
 <li>Added the <code>$button-letter-spacing</code>, <code>$anchor-color-visited</code> and <code>$anchor-text-decoration-visited-hover</code> variables</li>
 <li>Added the <code>$global-min-width</code> variable</li>
 <li>Installed <code>json-loader</code> node module to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
+<li>Updated documentation</li>
 </ul>
 <h4 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h4>
 <ul>
