--- a/styleguide/item-frontend.html
+++ b/styleguide/item-frontend.html
@@ -51,19 +51,19 @@
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-alignment">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.1</span
-                  ><span class="kss-nav__name">Alignment Classes</span>
+                  ><span class="kss-nav__name">Alignment</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-buttons">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.2</span
-                  ><span class="kss-nav__name">Button Classes</span>
+                  ><span class="kss-nav__name">Buttons</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-callout">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.3</span
-                  ><span class="kss-nav__name">Callout Classes</span>
+                  ><span class="kss-nav__name">Callouts</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
@@ -81,19 +81,25 @@
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-drupal7">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
-                  ><span class="kss-nav__name">Drupal 7 Styles</span>
+                  ><span class="kss-nav__name">WordPress</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-drupal7">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
+                  ><span class="kss-nav__name">Drupal 7</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-layout">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.7</span
-                  ><span class="kss-nav__name">Layout Classes</span>
+                  ><span class="kss-nav__name">Layout</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-lists">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.8</span
-                  ><span class="kss-nav__name">List Classes</span>
+                  ><span class="kss-nav__name">Lists</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
@@ -105,43 +111,49 @@
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-visibility">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.10</span
-                  ><span class="kss-nav__name">Visibility Classes</span>
+                  ><span class="kss-nav__name">Visibility</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-wordpress">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.11</span
-                  ><span class="kss-nav__name">WordPress Styles</span>
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-forms">
+                  <span class="kss-nav__ref ">2.3</span
+                  ><span class="kss-nav__name">Forms</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global">
-                  <span class="kss-nav__ref ">2.3</span
+                  <span class="kss-nav__ref ">2.4</span
                   ><span class="kss-nav__name">Global</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global-extendables">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.3.1</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.4.1</span
                   ><span class="kss-nav__name">Sass Extendables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global-functions">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.3.2</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.4.2</span
                   ><span class="kss-nav__name">Sass Functions</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global-mixins">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.3.3</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.4.3</span
                   ><span class="kss-nav__name">Sass Mixins</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-layout">
-                  <span class="kss-nav__ref ">2.4</span
+                  <span class="kss-nav__ref ">2.5</span
                   ><span class="kss-nav__name">Layout</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-typography">
+                  <span class="kss-nav__ref ">2.6</span
+                  ><span class="kss-nav__name">Typography</span>
                 </a>
               </li>
             </ul>
