--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -69,7 +69,7 @@
 <li><code>$ npm start</code> Watch files &amp; run appropriate tasks when needed</li>
 </ol>
 <h3 id="development-usage">Development Usage</h3>
-<p>The following commands can be run in the frontend directory during development:</p>
+<p>The following commands can be run in the frontend directory during development. An optional <code>--prod</code> flag can be appended to run for production environments, defaults to development.</p>
 <ul>
 <li><code>$ gulp</code> Runs the default tasks</li>
 <li><code>$ gulp js-lint</code> Lints JS files</li>
