--- a/styleguide/section-frontend.html
+++ b/styleguide/section-frontend.html
@@ -2613,7 +2613,7 @@ src/scss/application/global/_extendables.scss.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_extendables.scss</code>, line 81
+          Source: <code>frontend/global/_extendables.scss</code>, line 39
         </div>
 
     </section>
@@ -2671,7 +2671,7 @@ src/scss/application/global/_extendables.scss.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_extendables.scss</code>, line 34
+          Source: <code>frontend/global/_extendables.scss</code>, line 18
         </div>
 
     </section>
@@ -2702,7 +2702,7 @@ space-between, flex-direction: row, flex-wrap: wrap.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_extendables.scss</code>, line 57
+          Source: <code>frontend/global/_extendables.scss</code>, line 27
         </div>
 
     </section>
@@ -2731,7 +2731,7 @@ space-between, flex-direction: row, flex-wrap: wrap.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_extendables.scss</code>, line 123
+          Source: <code>frontend/global/_extendables.scss</code>, line 48
         </div>
 
     </section>
@@ -2760,7 +2760,7 @@ space-between, flex-direction: row, flex-wrap: wrap.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_extendables.scss</code>, line 140
+          Source: <code>frontend/global/_extendables.scss</code>, line 65
         </div>
 
     </section>
@@ -2789,7 +2789,7 @@ space-between, flex-direction: row, flex-wrap: wrap.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_extendables.scss</code>, line 194
+          Source: <code>frontend/global/_extendables.scss</code>, line 119
         </div>
 
     </section>
@@ -3135,13 +3135,71 @@ a white triangle. The one used depends on the lightness of the input color.</p>
         </div>
 
     </section>
+    <section id="kssref-frontend-global-mixins-button" class="kss-section kss-section--depth-4 ">
+
+      <div class="kss-style">
+        <h4 class="kss-title kss-title--level-4">
+          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-button">
+            <span class="kss-title__ref">
+              2.4.3.2
+              <span class="kss-title__permalink-hash">
+                  #frontend.global.mixins.button
+              </span>
+            </span>
+            button()
+          </a>
+        </h4>
+
+
+          <div class="kss-description">
+            <p>Creates a button.</p>
+
+          </div>
+
+      </div>
+
+
+        <div class="kss-source kss-style">
+          Source: <code>frontend/global/_mixins.scss</code>, line 193
+        </div>
+
+    </section>
+    <section id="kssref-frontend-global-mixins-flex" class="kss-section kss-section--depth-4 ">
+
+      <div class="kss-style">
+        <h4 class="kss-title kss-title--level-4">
+          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-flex">
+            <span class="kss-title__ref">
+              2.4.3.3
+              <span class="kss-title__permalink-hash">
+                  #frontend.global.mixins.flex
+              </span>
+            </span>
+            flex()
+          </a>
+        </h4>
+
+
+          <div class="kss-description">
+            <p>Defines a flexbox.</p>
+
+          </div>
+
+      </div>
+
+
+        <div class="kss-source kss-style">
+          Source: <code>frontend/global/_mixins.scss</code>, line 172
+        </div>
+
+    </section>
     <section id="kssref-frontend-global-mixins-mask-background-color" class="kss-section kss-section--depth-4 ">
 
       <div class="kss-style">
         <h4 class="kss-title kss-title--level-4">
           <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-mask-background-color">
             <span class="kss-title__ref">
-              2.4.3.2
+              2.4.3.4
               <span class="kss-title__permalink-hash">
                   #frontend.global.mixins.mask-background-color
               </span>
@@ -3179,7 +3237,7 @@ a white triangle. The one used depends on the lightness of the input color.</p>
         <h4 class="kss-title kss-title--level-4">
           <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-mask-image">
             <span class="kss-title__ref">
-              2.4.3.3
+              2.4.3.5
               <span class="kss-title__permalink-hash">
                   #frontend.global.mixins.mask-image
               </span>
@@ -3217,7 +3275,7 @@ a white triangle. The one used depends on the lightness of the input color.</p>
         <h4 class="kss-title kss-title--level-4">
           <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-mask-position">
             <span class="kss-title__ref">
-              2.4.3.4
+              2.4.3.6
               <span class="kss-title__permalink-hash">
                   #frontend.global.mixins.mask-position
               </span>
@@ -3255,7 +3313,7 @@ a white triangle. The one used depends on the lightness of the input color.</p>
         <h4 class="kss-title kss-title--level-4">
           <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-mask-repeat">
             <span class="kss-title__ref">
-              2.4.3.5
+              2.4.3.7
               <span class="kss-title__permalink-hash">
                   #frontend.global.mixins.mask-repeat
               </span>
@@ -3296,7 +3354,7 @@ a white triangle. The one used depends on the lightness of the input color.</p>
         <h4 class="kss-title kss-title--level-4">
           <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-mask-size">
             <span class="kss-title__ref">
-              2.4.3.6
+              2.4.3.8
               <span class="kss-title__permalink-hash">
                   #frontend.global.mixins.mask-size
               </span>
@@ -3334,7 +3392,7 @@ a white triangle. The one used depends on the lightness of the input color.</p>
         <h4 class="kss-title kss-title--level-4">
           <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-moz-specific">
             <span class="kss-title__ref">
-              2.4.3.7
+              2.4.3.9
               <span class="kss-title__permalink-hash">
                   #frontend.global.mixins.moz-specific
               </span>
@@ -3354,6 +3412,64 @@ a white triangle. The one used depends on the lightness of the input color.</p>
 
         <div class="kss-source kss-style">
           Source: <code>frontend/global/_mixins.scss</code>, line 34
+        </div>
+
+    </section>
+    <section id="kssref-frontend-global-mixins-row" class="kss-section kss-section--depth-4 ">
+
+      <div class="kss-style">
+        <h4 class="kss-title kss-title--level-4">
+          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-row">
+            <span class="kss-title__ref">
+              2.4.3.10
+              <span class="kss-title__permalink-hash">
+                  #frontend.global.mixins.row
+              </span>
+            </span>
+            row-full()
+          </a>
+        </h4>
+
+
+          <div class="kss-description">
+            <p>Sets a sections to full width, used for containing main page sections.</p>
+
+          </div>
+
+      </div>
+
+
+        <div class="kss-source kss-style">
+          Source: <code>frontend/global/_mixins.scss</code>, line 149
+        </div>
+
+    </section>
+    <section id="kssref-frontend-global-mixins-row" class="kss-section kss-section--depth-4 ">
+
+      <div class="kss-style">
+        <h4 class="kss-title kss-title--level-4">
+          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-row">
+            <span class="kss-title__ref">
+              2.4.3.10
+              <span class="kss-title__permalink-hash">
+                  #frontend.global.mixins.row
+              </span>
+            </span>
+            row()
+          </a>
+        </h4>
+
+
+          <div class="kss-description">
+            <p>Sets a sections max-width, used for containing main page sections.</p>
+
+          </div>
+
+      </div>
+
+
+        <div class="kss-source kss-style">
+          Source: <code>frontend/global/_mixins.scss</code>, line 124
         </div>
 
     </section>
