--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -118,6 +118,7 @@
 <li>Installed <code>json-loader</code> node module to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
 <li>Updated documentation</li>
 <li>Added warning when editing Frontend Build core scss files</li>
+<li>Made some default extendables into mixins</li>
 </ul>
 <h3 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h3>
 <ul>
