--- a/styleguide/item-frontend-global-mixins-flex.html
+++ b/styleguide/item-frontend-global-mixins-flex.html
@@ -41,24 +41,24 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-global-mixins-moz-specific" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-global-mixins-flex" class="kss-section kss-section--depth-4 is-fullscreen">
 
       <div class="kss-style">
         <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-moz-specific">
+          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-flex">
             <span class="kss-title__ref">
-              2.4.3.9
+              2.4.3.3
               <span class="kss-title__permalink-hash">
-                  #frontend.global.mixins.moz-specific
+                  #frontend.global.mixins.flex
               </span>
             </span>
-            moz-specific()
+            flex()
           </a>
         </h4>
 
 
           <div class="kss-description">
-            <p>Adds Mozilla specific styles.</p>
+            <p>Defines a flexbox.</p>
 
           </div>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_mixins.scss</code>, line 34
+          Source: <code>frontend/global/_mixins.scss</code>, line 172
         </div>
 
     </div>
