--- a/styleguide/item-frontend-global-mixins-row.html
+++ b/styleguide/item-frontend-global-mixins-row.html
@@ -41,24 +41,24 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-global-mixins-moz-specific" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-global-mixins-row" class="kss-section kss-section--depth-4 is-fullscreen">
 
       <div class="kss-style">
         <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-moz-specific">
+          <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-row">
             <span class="kss-title__ref">
-              2.4.3.9
+              2.4.3.10
               <span class="kss-title__permalink-hash">
-                  #frontend.global.mixins.moz-specific
+                  #frontend.global.mixins.row
               </span>
             </span>
-            moz-specific()
+            row()
           </a>
         </h4>
 
 
           <div class="kss-description">
-            <p>Adds Mozilla specific styles.</p>
+            <p>Sets a sections max-width, used for containing main page sections.</p>
 
           </div>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_mixins.scss</code>, line 34
+          Source: <code>frontend/global/_mixins.scss</code>, line 124
         </div>
 
     </div>
@@ -104,4 +104,6 @@
 
 <!-- Automatically built using <a href="https://github.com/kss-node/kss-node">kss-node</a>. -->
 </body>
+</html>
+
 </html>
