--- a/styleguide/item-frontend.html
+++ b/styleguide/item-frontend.html
@@ -79,21 +79,15 @@
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-drupal7">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
-                  ><span class="kss-nav__name">WordPress</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-drupal7">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
-                  ><span class="kss-nav__name">Drupal 7</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-layout">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.7</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
                   ><span class="kss-nav__name">Layout</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-lib">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.7</span
+                  ><span class="kss-nav__name">Libraries</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
