--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -99,26 +99,35 @@
 <li>And awesome <a href="https://github.com/bmarshall511/frontend/graphs/contributors">contributors</a></li>
 </ul>
 <h2 id="changelog">Changelog</h2>
-<h3 id="v4-0-1-tbd-">v4.0.1 (TBD)</h3>
+<h3 id="v4-1-0-tbd-">v4.1.0 (TBD)</h3>
 <ul>
-<li>Fixed npm publish error</li>
-<li>README typo fix</li>
 <li>Removed toolkit</li>
-<li>Fixed js-transpile task error from stopping the build</li>
-<li>Installed babel-preset-react to support React applications by default</li>
-<li>Installed css-loader and style-loader to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)</li>
-<li>Fixed Compass compile issue during watch when an error is found</li>
-<li>Fixed elint error bug</li>
-<li>Updated plumber error handling</li>
-<li>Added a scss-lint config file</li>
-<li>Fixed gulp image path</li>
-<li>Fixed styleguide typo</li>
-<li>Added the <code>$button-letter-spacing</code>, <code>$anchor-color-visited</code> and <code>$anchor-text-decoration-visited-hover</code> variables</li>
-<li>Added the <code>$global-min-width</code> variable</li>
-<li>Installed <code>json-loader</code> node module to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
+<li>Updated Drupal 7 styles</li>
 <li>Updated documentation</li>
-<li>Added warning when editing Frontend Build core scss files</li>
-<li>Made some default extendables into mixins</li>
+<li>Updated plumber error handling</li>
+<li>Fix for font directory copying issue (<a href="https://github.com/bmarshall511/frontend/issues/6">https://github.com/bmarshall511/frontend/issues/6</a>)</li>
+<li>Fix for styleguide typos</li>
+<li>Fix for gulp image path</li>
+<li>Fix for <code>js-transpile</code> task error from stopping the build</li>
+<li>Fix for Compass compile issue during watch when an error is found</li>
+<li>Fix for npm publish error</li>
+<li>Fix for elint error bug</li>
+<li>Fix for README typo</li>
+<li>New scss-lint config file</li>
+<li>New warning when editing Frontend Build core scss files</li>
+<li>New mixins</li>
+<li>New SCSS variables:
+-- <code>$blockquote-letter-spacing</code>
+-- <code>$global-min-width</code>
+-- <code>$button-letter-spacing</code>
+-- <code>$anchor-color-visited</code>
+-- <code>$anchor-text-decoration-visited-hover</code>
+-- <code>$selection-background</code>
+-- <code>$selection-color</code></li>
+<li>New node modules:
+-- <code>babel-preset-react</code> to support React applications by default
+-- <code>css-loader</code> and <code>style-loader</code> to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)
+-- <code>json-loader</code> to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
 </ul>
 <h3 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h3>
 <ul>
