--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -117,17 +117,17 @@
 <li>New warning when editing Frontend Build core scss files</li>
 <li>New mixins</li>
 <li>New SCSS variables:
--- <code>$blockquote-letter-spacing</code>
--- <code>$global-min-width</code>
--- <code>$button-letter-spacing</code>
--- <code>$anchor-color-visited</code>
--- <code>$anchor-text-decoration-visited-hover</code>
--- <code>$selection-background</code>
--- <code>$selection-color</code></li>
+<strong> <code>$blockquote-letter-spacing</code>
+</strong> <code>$global-min-width</code>
+<strong> <code>$button-letter-spacing</code>
+</strong> <code>$anchor-color-visited</code>
+<strong> <code>$anchor-text-decoration-visited-hover</code>
+</strong> <code>$selection-background</code>
+** <code>$selection-color</code></li>
 <li>New node modules:
--- <code>babel-preset-react</code> to support React applications by default
--- <code>css-loader</code> and <code>style-loader</code> to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)
--- <code>json-loader</code> to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
+<strong> <code>babel-preset-react</code> to support React applications by default
+</strong> <code>css-loader</code> and <code>style-loader</code> to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)
+** <code>json-loader</code> to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
 </ul>
 <h3 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h3>
 <ul>
