--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -33,7 +33,7 @@
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-frontend.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend Build (core)</span>
         </a>
       </li>
     </ul>
@@ -116,18 +116,24 @@
 <li>New scss-lint config file</li>
 <li>New warning when editing Frontend Build core scss files</li>
 <li>New mixins</li>
-<li>New SCSS variables:
-<strong> <code>$blockquote-letter-spacing</code>
-</strong> <code>$global-min-width</code>
-<strong> <code>$button-letter-spacing</code>
-</strong> <code>$anchor-color-visited</code>
-<strong> <code>$anchor-text-decoration-visited-hover</code>
-</strong> <code>$selection-background</code>
-** <code>$selection-color</code></li>
-<li>New node modules:
-<strong> <code>babel-preset-react</code> to support React applications by default
-</strong> <code>css-loader</code> and <code>style-loader</code> to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)
-** <code>json-loader</code> to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
+<li>New SCSS variables:<ul>
+<li><code>$blockquote-letter-spacing</code></li>
+<li><code>$global-min-width</code></li>
+<li><code>$button-letter-spacing</code></li>
+<li><code>$anchor-color-visited</code></li>
+<li><code>$anchor-text-decoration-visited-hover</code></li>
+<li><code>$selection-background</code></li>
+<li><code>$selection-color</code></li>
+<li><code>$paragraph-letter-spacing</code></li>
+<li><code>$code-letter-spacing</code></li>
+</ul>
+</li>
+<li>New node modules:<ul>
+<li><code>babel-preset-react</code> to support React applications by default</li>
+<li><code>css-loader</code> and <code>style-loader</code> to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)</li>
+<li><code>json-loader</code> to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
+</ul>
+</li>
 </ul>
 <h3 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h3>
 <ul>
