--- a/styleguide/item-application.html
+++ b/styleguide/item-application.html
@@ -71,7 +71,7 @@
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-frontend.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend Build (core)</span>
         </a>
       </li>
     </ul>
@@ -105,7 +105,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 54
+          Source: <code>style.scss</code>, line 58
         </div>
 
     </div>
