--- a/styleguide/item-frontend.html
+++ b/styleguide/item-frontend.html
@@ -33,7 +33,7 @@
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-frontend.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend Build (core)</span>
         </a>
             <ul class="kss-nav__menu-child">
               <li class="kss-nav__menu-item">
@@ -117,7 +117,7 @@
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global">
                   <span class="kss-nav__ref ">2.4</span
-                  ><span class="kss-nav__name">Global</span>
+                  ><span class="kss-nav__name">Global Imports</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
@@ -168,13 +168,17 @@
                   #frontend
               </span>
             </span>
-            Frontend
+            Frontend Build (core)
           </a>
         </h1>
 
 
           <div class="kss-description">
-            <p>REQUIRED. All Frontend imports.</p>
+            <p>Contains all core Frontend Build imports. <b>These imports should NEVER be
+edited directly</b>, instead an override file should be created in the
+application directory with the same filename, following the same directory
+structure. Once created, it will need to be included below in the appropriate
+section.</p>
 
           </div>
 
