--- a/styleguide/section-application.html
+++ b/styleguide/section-application.html
@@ -71,7 +71,7 @@
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-frontend.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend Build (core)</span>
         </a>
       </li>
     </ul>
@@ -105,7 +105,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 54
+          Source: <code>style.scss</code>, line 58
         </div>
 
     </div>
@@ -134,7 +134,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 69
+          Source: <code>style.scss</code>, line 73
         </div>
 
     </section>
@@ -163,7 +163,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 85
+          Source: <code>style.scss</code>, line 89
         </div>
 
     </section>
@@ -192,7 +192,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 61
+          Source: <code>style.scss</code>, line 65
         </div>
 
     </section>
@@ -279,7 +279,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 77
+          Source: <code>style.scss</code>, line 81
         </div>
 
     </section>
