--- a/styleguide/item-frontend-components.html
+++ b/styleguide/item-frontend-components.html
@@ -33,7 +33,7 @@
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-frontend.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend Build (core)</span>
         </a>
       </li>
     </ul>
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 25
+          Source: <code>style.scss</code>, line 29
         </div>
 
     </div>
