--- a/styleguide/item-frontend-global-functions-rem-calc.html
+++ b/styleguide/item-frontend-global-functions-rem-calc.html
@@ -33,7 +33,7 @@
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-frontend.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Frontend Build (core)</span>
         </a>
       </li>
     </ul>
