--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -126,6 +126,9 @@
 <li><code>$selection-color</code></li>
 <li><code>$paragraph-letter-spacing</code></li>
 <li><code>$code-letter-spacing</code></li>
+<li><code>$pager-link-decoration</code></li>
+<li><code>$pager-link-decoration-hover</code></li>
+<li><code>$figure-caption-style</code></li>
 </ul>
 </li>
 <li>New node modules:<ul>
