--- a/styleguide/item-frontend-global-extendables-button.html
+++ b/styleguide/item-frontend-global-extendables-button.html
@@ -58,7 +58,10 @@
 
 
           <div class="kss-description">
-            <p>Styles an element with the default button styles.</p>
+            <p>Styles an element to be a button. Mixin available:
+<a href="#kssref-frontend-global-mixins-button"><code>button</code></a>. See
+<a href="#kssref-frontend-components-buttons"><code>.button</code></a> for
+more information.</p>
 
           </div>
 
