--- a/styleguide/item-frontend-global-extendables-pager.html
+++ b/styleguide/item-frontend-global-extendables-pager.html
@@ -58,7 +58,9 @@
 
 
           <div class="kss-description">
-            <p>Styles a list element as a pager.</p>
+            <p>Styles a list element to be a pager. See
+<a href="#kssref-frontend-components-common-pager"><code>.pager</code></a>
+for more information.</p>
 
           </div>
 
@@ -66,7 +68,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_extendables.scss</code>, line 65
+          Source: <code>frontend/global/_extendables.scss</code>, line 68
         </div>
 
     </div>
