--- a/styleguide/item-frontend-components-common-pager.html
+++ b/styleguide/item-frontend-components-common-pager.html
@@ -88,7 +88,8 @@
           </p>
 
           <div class="kss-description">
-            <p>Styles a list element as a pager.</p>
+            <p>Styles a list element to be a pager. Extendable avaiable:
+<a href="#kssref-frontend-global-extendables-pager"><code>%pager</code></a>.</p>
 
           </div>
 
@@ -102,13 +103,21 @@
 
           <div class="kss-modifier__example">
             <ul class="pager">
-  <li><a href="#">First</a>
-  <li class="pager-ellipsis"><a href="#">&hellip;</a>
-  <li><a href="#">5</a>
-  <li class="pager-current"><a href="#">6</a>
-  <li><a href="#">7</a>
-  <li class="pager-ellipsis"><a href="#">&hellip;</a>
-  <li><a href="#">Last</a>
+  <li class="pager-first"><a href="#">« first</a></li>
+  <li class="pager-previous"><a href="#">‹ previous</a></li>
+  <li class="pager-ellipsis">…</li>
+  <li class="pager-item"><a href="#">5</a></li>
+  <li class="pager-item"><a href="#">6</a></li>
+  <li class="pager-item"><a href="#">7</a></li>
+  <li class="pager-item"><a href="#">8</a></li>
+  <li class="pager-current">9</li>
+  <li class="pager-item"><a href="#">10</a></li>
+  <li class="pager-item"><a href="#">11</a></li>
+  <li class="pager-item"><a href="#">12</a></li>
+  <li class="pager-item"><a href="#">13</a></li>
+  <li class="pager-ellipsis">…</li>
+  <li class="pager-next"><a title="Go to next page" href="#">next ›</a></li>
+  <li class="pager-last"><a title="Go to last page" href="#">last »</a></li>
 </ul>
             <div class="kss-modifier__example-footer"></div>
           </div>
@@ -120,13 +129,21 @@
                 Markup
             </summary>
             <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;ul class&#x3D;&quot;pager&quot;&gt;
-  &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;First&lt;/a&gt;
-  &lt;li class&#x3D;&quot;pager-ellipsis&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;&amp;hellip;&lt;/a&gt;
-  &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;5&lt;/a&gt;
-  &lt;li class&#x3D;&quot;pager-current&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;6&lt;/a&gt;
-  &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;7&lt;/a&gt;
-  &lt;li class&#x3D;&quot;pager-ellipsis&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;&amp;hellip;&lt;/a&gt;
-  &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Last&lt;/a&gt;
+  &lt;li class&#x3D;&quot;pager-first&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;« first&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-previous&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;‹ previous&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-ellipsis&quot;&gt;…&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;5&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;6&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;7&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;8&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-current&quot;&gt;9&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;10&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;11&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;12&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-item&quot;&gt;&lt;a href&#x3D;&quot;#&quot;&gt;13&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-ellipsis&quot;&gt;…&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-next&quot;&gt;&lt;a title&#x3D;&quot;Go to next page&quot; href&#x3D;&quot;#&quot;&gt;next ›&lt;/a&gt;&lt;/li&gt;
+  &lt;li class&#x3D;&quot;pager-last&quot;&gt;&lt;a title&#x3D;&quot;Go to last page&quot; href&#x3D;&quot;#&quot;&gt;last »&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;</code></pre>
           </details>
 
