--- a/styleguide/item-frontend-components-common-table-row.html
+++ b/styleguide/item-frontend-components-common-table-row.html
@@ -52,7 +52,7 @@
                   #frontend.components.common.table-row
               </span>
             </span>
-            Responsive Table Column
+            Responsive Table Row
           </a>
         </h4>
 
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table column element without the <code>td</code> element.</p>
+            <p>Make a responsive table row element without the <code>tr</code> element.</p>
 
           </div>
 
@@ -159,7 +159,7 @@
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 107
+          Source: <code>frontend/components/classes/_common.scss</code>, line 79
         </div>
 
     </div>
@@ -198,3 +198,4 @@
 <!-- Automatically built using <a href="https://github.com/kss-node/kss-node">kss-node</a>. -->
 </body>
 </html>
+/html>
